--- a/docker/db/postgres/psql.env
+++ b/docker/db/postgres/psql.env
@@ -1,4 +1,4 @@
-POSTGRES_USER=myappuser
-POSTGRES_PASSWORD=myapppassword
-POSTGRES_DB=myappdb
+POSTGRES_USER=sia-user
+POSTGRES_PASSWORD=sia-pass
+POSTGRES_DB=sia-db
 PGDATA=/data
