--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,7 @@
         "styled-components": "^2.1.0"
     },
     "scripts": {
-        "start": "webpack-dev-server --config webpack.config --port $PORT --host=0.0.0.0"
+        "start": "webpack --watch & webpack-dev-server --config webpack.config --port $PORT --host=0.0.0.0"
     },
     "devDependencies": {
         "babel-loader": "^7.1.0",
