--- a/app/.babelrc
+++ b/app/.babelrc
@@ -1,9 +1,4 @@
 {
-    "presets": [
-        "es2015",
-        "react"
-    ],
-    "plugins": [
-        "react-hot-loader/babel"
-    ]
+  "presets": ["env", "react"],
+  "plugins": ["react-hot-loader/babel", "transform-class-properties"]
 }
