--- a/app/.babelrc
+++ b/app/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["env", "react"],
+  "presets": [["env", { "shippedProposals": true }], "react"],
   "plugins": ["react-hot-loader/babel", "transform-class-properties"]
 }
