--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "Tane Piper <piper.tane@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "lerna": "^2.1.2",
     "minimist": "^1.2.0",
-    "lerna": "^2.1.2"
+    "moment": "^2.19.1"
   },
   "scripts": {
     "postinstall": "lerna bootstrap && npm run compose:build",
