--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "babel-polyfill": "^6.23.0",
     "bootstrap": "^3.3.7",
     "classnames": "^2.2.5",
+    "moment": "^2.19.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
