--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "lerna": "^2.1.2",
-    "minimist": "^1.2.0",
-    "moment": "^2.19.1"
+    "minimist": "^1.2.0"
   },
   "scripts": {
     "postinstall": "lerna bootstrap && npm run compose:build",
